--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
   <meta charset="utf-8">
   <title>Webapp</title>
   <base href="/">
